# snapshot-manager

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  sample-config.toml
snapshot_manager/: snapshot_manager.py
snapshot_manager/tests/: test_snapshot_manager.py
